ECOSCOM-1890 - Fix mobile styles jumping

--- a/idocs-share/src/main/resources/META-INF/themes/citeckTheme/presentation.css
+++ b/idocs-share/src/main/resources/META-INF/themes/citeckTheme/presentation.css
@@ -5,7 +5,7 @@
 
 /* hack to fix mobile styles jumping */
 .grid {
-    display: none;
+    visibility: hidden;
 }
 
  /* Site-wide Styles */
